--- a/config/locales/devise_invitable.en.yml
+++ b/config/locales/devise_invitable.en.yml
@@ -1,28 +1,28 @@
-en:
+fr:
   devise:
     failure:
-      invited: "Vous avez une invitation en attente, acceptez-la pour compléter votre inscription."
+      invited: "YVous avez une invitation en attente, acceptez-la pour compléter votre inscription."
     invitations:
-      send_instructions: "An invitation email has been sent to %{email}."
+      send_instructions: "Une invication a éé envoyée à %{email}."
       invitation_token_invalid: "The invitation token provided is not valid!"
-      updated: "Your password was set successfully. You are now signed in."
-      updated_not_active: "Your password was set successfully."
-      no_invitations_remaining: "No invitations remaining"
-      invitation_removed: "Your invitation was removed."
+      updated: "Votre mot de passe a bien été pris en compte. Vous êtes maintenant connecté."
+      updated_not_active: "Votre mot de passe a bien été pris en compte."
+      no_invitations_remaining: "Aucune invitation en attente"
+      invitation_removed: "Votre invitation a été supprimée."
       new:
-        header: "Send invitation"
-        submit_button: "Send an invitation"
+        header: "Envoyer une invitation"
+        submit_button: "Envoyer une invitation"
       edit:
-        header: "Set your password"
-        submit_button: "Set my password"
+        header: "Définir un mot de passe"
+        submit_button: "OK"
     mailer:
       invitation_instructions:
-        subject: "Invitation instructions"
-        hello: "Hello %{email}"
-        someone_invited_you: "Someone has invited you to %{url}, you can accept it through the link below."
-        accept: "Accept invitation"
+        subject: "Instructions"
+        hello: "Bonjour %{email}"
+        someone_invited_you: "Vous avez été invité par %{url}. Cliquez sur le lien ci-dessous pour accepter l'invitation."
+        accept: "Accepter l'invitation"
         accept_until: "This invitation will be due in %{due_date}."
-        ignore: "If you don't want to accept the invitation, please ignore this email. Your account won't be created until you access the link above and set your password."
+        ignore: "Si cette invitation ne vous intéresse pas, ne tenez pas compte de ce message."
   time:
     formats:
       devise:
